The navigation for the printer setup works beautifully now

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -11,6 +11,8 @@
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 
+
 		android:entries="@array/DEMO_APPS" />
+<!--	^ location of layout for main menu-->
 <!--ctrl click the string above, it'll take you over there-->
 </LinearLayout>
