--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -9,10 +9,14 @@
 	<ListView
 		android:id="@+id/android:list"
 		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-
-
+		android:layout_height="0dp"
+		android:layout_weight="1"
 		android:entries="@array/DEMO_APPS" />
-<!--	^ location of layout for main menu-->
-<!--ctrl click the string above, it'll take you over there-->
+
+	<TextView
+		android:id="@+id/bottomText"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:text="Your Text Here" />
 </LinearLayout>
