--- a/app/src/main/res/layout/connection_screen_with_status.xml
+++ b/app/src/main/res/layout/connection_screen_with_status.xml
@@ -98,7 +98,7 @@
 
 	<Button
 		android:id="@+id/testButton"
-		android:text="Test"
+		android:text="Connect"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:layout_centerHorizontal="true" />
