--- a/app/src/main/res/layout/connection_screen_with_status.xml
+++ b/app/src/main/res/layout/connection_screen_with_status.xml
@@ -75,6 +75,26 @@
 			android:inputType="number"
 			android:layout_weight="1" />
 	</LinearLayout>
+	<LinearLayout
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content">
+
+		<TextView
+			android:id="@+id/pinText"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:textSize="20.0sp"
+			android:text="PIN:"
+			android:layout_weight="1" />
+		<EditText
+			android:id="@+id/pinInput"
+			android:text=""
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:maxLength="4"
+			android:inputType="number"
+			android:layout_weight="1" />
+	</LinearLayout>
 
 	<LinearLayout
 		android:layout_width="fill_parent"
