--- a/app/src/main/res/layout/password_change.xml
+++ b/app/src/main/res/layout/password_change.xml
@@ -24,7 +24,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:maxLength="4"
-            android:inputType="textNoSuggestions|text"
+            android:inputType="number"
             android:layout_weight="1" />
     </LinearLayout>
 
@@ -67,7 +67,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:maxLength="4"
-            android:inputType="textNoSuggestions|text"
+            android:inputType="number"
             android:layout_weight="1" />
     </LinearLayout>
 
