Basically everything has been updated for modern android and seems to run without crashing

--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:text="Connection Successful"
         android:textSize="18sp"
-        android:textColor="#ffffff"/>
+        android:textColor="#cccccc"/>
 
     <Button
         android:id="@+id/okButton"
