--- a/app/src/main/res/layout/stored_format_demo.xml
+++ b/app/src/main/res/layout/stored_format_demo.xml
@@ -5,10 +5,25 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
 
+	<Button
+		android:id="@+id/sendFromAppButton"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="Send New Format To Printer"
+		android:layout_gravity="center_horizontal"
+		android:layout_marginTop="16dp"
+		android:layout_marginBottom="16dp"/>
+
+	<View
+		android:layout_width="match_parent"
+		android:layout_height="1dp"
+		android:background="#000000" />
+
 	<ListView
 		android:id="@android:id/list"
 		android:layout_width="fill_parent"
-		android:layout_height="match_parent" />
+		android:layout_height="0dp"
+		android:layout_weight="1" />
 
 	<TextView
 		android:id="@android:id/empty"
